--- a/src/sass/sections/_most-wanted.scss
+++ b/src/sass/sections/_most-wanted.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, auto);
-    column-gap: $spacer*1.5;
+    column-gap: $gap;
 
     .text {
       margin-bottom: $spacer * 2;
@@ -45,7 +45,7 @@
         @include media-breakpoint-up(lg) {
           margin: 0 0 $grid-gutter-width*.75 0;
           padding: 0;
-          gap: $spacer * 1.5;
+          gap: $gap;
         }
         @include media-breakpoint-up(xl) {
           grid-column: 2 / span 3;
@@ -53,7 +53,7 @@
         }
         .swiper-wrapper {
           @include media-breakpoint-up(lg) {
-            gap: $spacer*1.5;
+            gap: $gap;
           }
           .swiper-slide {
             width: 232px;
