--- a/src/sass/sections/_page-header.scss
+++ b/src/sass/sections/_page-header.scss
@@ -48,6 +48,7 @@
       grid-column: 1 / -1;
       @include media-breakpoint-up(xl) {
         grid-column: 1 / span 3;
+        padding-right: 4px;
       }
       &-toggle {
         padding: 0 0 $spacer 0;
@@ -83,7 +84,7 @@
           position: static;
           background-color: transparent;
           padding: $spacer 0 0 0;
-          gap: $spacer*1.5;
+          gap: $gap;
         }
         fieldset {
           &:not(:last-child) {
@@ -106,6 +107,7 @@
 
           //menu in menu//
           .dropdown {
+            padding-right: 0;
             .dropdown-toggle {
               display: none;
               @include media-breakpoint-up(lg) {
